--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ header .fa-bars{
 
 .home{
   min-height: 100vh;
-  background:linear-gradient(rgba(198, 59, 250,.8),rgba(198, 59, 250,.8)), url(https://github.com/Rajdeep19CS78/LGMVIP-Web-Task3/blob/493ba3de4d989ab544d4280c4924f2132f7e4fc5/bg.jpg) no-repeat;
+  background:linear-gradient(rgba(198, 59, 250,.8),rgba(198, 59, 250,.8)), url('./bg.jpg') no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
